<resources>
    <string name="app_name">Notes</string>
    <string name="app_name_custom">Notes [Storm_Hawk]</string>
    <string name="add">Add</string>
    <string name="add_new">Add_New</string>
    <string name="add_new_note">Add_New_Note</string>
    <string name="add_new_checklist">Add_New_Checklist</string>
    <string name="title">Title</string>
    <string name="type_here">Write something ..</string>
    <string name="underdevelopment">Under development</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_message">Error</string>
    <string name="same_note_error_msg">Note with same title exist</string>
    <string name="note_title_length_error_msg">Length of title is 0</string>
    <string name="ok_button_msg">OK</string>
    <string name="new_note_noted">New note added successfully.</string>
    <string name="title_hint">Please enter title..</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note deleted successfully.</string>
    <string name="note_updated">Note updated successfully.</string>
    <string name="add_new_note_text">Add New Note</string>
    <string name="success_dialog_title">Success</string>
    <string name="empty_title_error_msg">Please enter title..</string>

</resources>
