<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="newNoteModel"
            type="com.demoapps.notes.model.NewNoteModel" />

        <variable
            name="newNoteViewModel"
            type="com.demoapps.notes.viewmodel.NewNoteViewModel" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.NewNoteActivity"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/toolbarNoteColor1"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/colorWhite">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newNoteEditText"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_40"
                    android:hint="@string/title_hint"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/new_note_title_bg"
                    android:inputType="textCapWords"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:addTextChangedListener="@{newNoteViewModel.notesTitleWatcher()}" />

                <Button
                    android:id="@+id/colorButton"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:background="@color/noteColor1"
                    android:layout_marginStart="@dimen/dp_10"
                    app:layout_constraintStart_toEndOf="@id/newNoteEditText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:onClick="@{newNoteViewModel::toggleColorPicker}"/>

                <ImageButton
                    android:id="@+id/deleteImageButton"
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:contentDescription="@string/delete"
                    android:src="@drawable/delete_note_filled"
                    android:background="@drawable/done_icon_bg"
                    app:layout_constraintEnd_toStartOf="@id/doneImageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:onClick="@{newNoteViewModel::deleteNote}"/>

                <ImageButton
                    android:id="@+id/doneImageButton"
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:contentDescription="@string/add"
                    android:src="@drawable/double_tick_white"
                    android:background="@drawable/done_icon_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:onClick="@{newNoteViewModel::addNewNote}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/noteBgColor1"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor1"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@{newNoteViewModel.getCurrentDate()}"
                android:textSize="@dimen/sp_15"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.NewNoteActivity"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:background="@color/noteBgColor1"
            android:textColor="@color/textColor1"
            android:fontFamily="sans-serif-condensed-medium"
            android:inputType="textMultiLine"
            android:textSize="@dimen/sp_20"
            android:hint="@string/type_here"
            android:gravity="start"
            app:addTextChangedListener="@{newNoteViewModel.notesTextWatcher()}"/>

        <include
            android:id="@+id/colorPickerView"
            layout="@layout/activity_color_picker"
            bind:colorPickerHandler="@{newNoteViewModel}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

</layout>