...
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/newNote"
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:contentDescription="@string/add"
                    android:onClick="@{homeScreenHandler::addNewNote}"
                    android:src="@drawable/add2"
                    android:background="@drawable/add_icon_background"
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.HomeScreenActivity"
        android:animateLayoutChanges="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

...
