...
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_20"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogTextColor"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
...
